force-app/main/default/objects/SPEN_PlanningDetails__c/SPEN_PlanningDetails__c.object-meta.xml
<CustomObject>
    <description>This custom object is for Transmission process.</description>
    <label>Planning Details</label>
    <nameField>
        <label>Planning Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>