force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_14DaysPriorToOpenDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_14DaysPriorToOpenDate__c</fullName>
    <formula>SPEN_Openforacceptancedate__c  - 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>14 Days Prior To Open Date</label>
    <type>Date</type>
</CustomField>