force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_ClocksartreceivefromNGESO__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ClocksartreceivefromNGESO__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>This field is for Transmission planning details process.</description>
    <label>Clock start received from NGESO</label>
    <type>Date</type>
</CustomField>