force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_Costsheetapproved__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Costsheetapproved__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Cost sheet approved</label>
    <type>Date</type>
</CustomField>