force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_Costsheetcirculated__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Costsheetcirculated__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Cost sheet circulated</label>
    <type>Date</type>
</CustomField>