force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_Costsheettarget__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Costsheettarget__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Clock Start Date plus 28 calendar days</inlineHelpText>
    <label>Cost sheet target</label>
    <type>Date</type>
</CustomField>