force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_CountofSBNsreceived__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CountofSBNsreceived__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Count of SBNs received</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>