force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_DateInitialSBNreceived__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateInitialSBNreceived__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Date Initial SBN received</label>
    <type>Date</type>
</CustomField>