force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_DateRevisedInformationReceived__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateRevisedInformationReceived__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Date Revised Information Received</label>
    <type>Date</type>
</CustomField>