force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_DraftDueDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DraftDueDate__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Clock Start Date + 2 Months</inlineHelpText>
    <label>Draft Due Date</label>
    <type>Date</type>
</CustomField>