force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_Extendedacceptancedate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Extendedacceptancedate__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>This field is for Transmission planning details process.</description>
    <label>Extended acceptance date</label>
    <type>Date</type>
</CustomField>