force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_FinalDueDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FinalDueDate__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Draft Due Date + 14 Calendar days</inlineHelpText>
    <label>Final Due Date</label>
    <type>Date</type>
</CustomField>