force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_FinalIssued__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FinalIssued__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Final Issued</label>
    <type>Date</type>
</CustomField>