force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_InitialSBNresponseactualdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InitialSBNresponseactualdate__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Initial SBN response actual date</label>
    <type>Date</type>
</CustomField>