force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_InitialSBNresponsetargetdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InitialSBNresponsetargetdate__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Date Initial SBN Received + 7 Calendar days</inlineHelpText>
    <label>Initial SBN response target date</label>
    <type>Date</type>
</CustomField>