force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_NGESOOfferToUser__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NGESOOfferToUser__c</fullName>
    <inlineHelpText>Clock start date plus 3 calendar months</inlineHelpText>
    <label>NGESO offer to user</label>
    <type>Date</type>
</CustomField>