force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_Openforacceptancedate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Openforacceptancedate__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Clock Start Date + 7 Calendar Months</inlineHelpText>
    <label>Open for acceptance date</label>
    <type>Date</type>
</CustomField>