force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_Optionsdocapproved__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Optionsdocapproved__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Options doc approved</label>
    <type>Date</type>
</CustomField>