force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_Optionsdoctarget__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Optionsdoctarget__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Clock Start Date plus 14 calendar Days</inlineHelpText>
    <label>Options doc target</label>
    <type>Date</type>
</CustomField>