force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_PSapproved__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PSapproved__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>P&amp;S approved</label>
    <type>Date</type>
</CustomField>