force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_PStarget__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PStarget__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Target SRG plus 14 calendar days</inlineHelpText>
    <label>P&amp;S target</label>
    <type>Date</type>
</CustomField>