force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_RevisedInforesponsetargetdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RevisedInforesponsetargetdate__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Date Revised Information Received plus 3 Calendar days</inlineHelpText>
    <label>Revised Information response target date</label>
    <type>Date</type>
</CustomField>