force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_RevisedSBNresponseactualdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RevisedSBNresponseactualdate__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Revised SBN response actual date</label>
    <type>Date</type>
</CustomField>