force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_SBNDeclaredNotCompetent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SBNDeclaredNotCompetent__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>SBN Declared Not Competent</label>
    <type>Date</type>
</CustomField>