force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_TargetSRG__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TargetSRG__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>Target SRG</label>
    <type>Date</type>
</CustomField>