force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_TOCOciculatetarget__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TOCOciculatetarget__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <inlineHelpText>Target SRG plus 7 calendar days</inlineHelpText>
    <label>TOCO ciculate target</label>
    <type>Date</type>
</CustomField>