force-app/main/default/objects/SPEN_PlanningDetails__c/fields/SPEN_TOCOcirculated__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TOCOcirculated__c</fullName>
    <description>This field is for Transmission planning details process.</description>
    <label>TOCO circulated</label>
    <type>Date</type>
</CustomField>